# gilded-rose-python-with-tests

./: gilded_rose.py  gilded_rose_test.py  pyproject.toml  test.sh
