[tool.poetry]
name = "gilded-rose-python-with-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "1.4.3"
argh = "0.26.2"
colorama = "0.3.9"
coverage = "4.3.4"
nose = "1.3.7"
nose-watch = "0.9.1"
packaging = "16.8"
pathtools = "0.1.2"
pyparsing = "2.2.0"
PyYAML = "5.4"
rednose = "1.2.2"
six = "1.10.0"
termstyle = "0.1.11"
watchdog = "0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
